--- a/WEB_253504_DUBOVIK.UI/Views/Shared/_Layout.cshtml
+++ b/WEB_253504_DUBOVIK.UI/Views/Shared/_Layout.cshtml
@@ -16,85 +16,28 @@
     <link rel="stylesheet" href="~/WEB_253504_DUBOVIK.UI.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-
-    
     <header>
         <div class="container">
 
             <!-- Панель навигации -->
             <nav class="navbar navbar-expand-md navbar-dark bg-dark">
             <!-- меню сайта -->
-                <a class="navbar-brand" href="#">25350045</a>
-                <div class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Лб1</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Product" asp-action="Index">Каталог</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="Index">Администрирование</a>
-                    </li>
-
-                </div>
-                <!-- меню сайта - конец -->
-                <!-- Информация пользователя -->
-                <a href="#" class="navbar-text ms-auto">
-                    00,0 руб <i class="fa-solid fa-cart-shopping"></i> (0)
-                </a>
-                <div class="dropdown ms-4 nav-color">
-                    <button class="btn btn-secondary dropdown-toggle"
-                        type="button" id="dropdownMenuButton"
-                        data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                            User@gmail.com
-                            <img src="Images/profile.jpg" width="50" alt="User" class="rounded" />
-
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <li>
-                        <span class="dropdown-item-text">
-                        <img src="Images/profile.jpg"
-                        width="50" alt="User" class="rounded" />
-                        user@gmail.com
-                        </span>
-                        </li>
-                        <li><hr class="dropdown-divider"></li>
-                        
-                        <div class="user-links">
-                                <a asp-area="" asp-controller="Cart" asp-action="Index">Корзина</a>
-                                
-                                <form id="logoutForm" class="form-inline">
-                                    <a asp-area="" asp-controller="Account" asp-action="LogOut" name="Logout" id="Logout" class="nav-link btn btn-link text-dark" role="button">Logout</a>
-                                </form>
-                                
-                        </div>
-
-                        <li>
-                        
-                        </li>
-                    </ul>
-                </div>
-            <!-- Информация пользователя - конец -->
+                <partial name="_Navbar_Menu" />
+            <!-- информация пользователя -->
+                <partial name="_Navbar_UserInfo" />
+            
             </nav> <!-- Панель навигации - конец -->
 
-
-
-            <!-- Панель навигации -->
-        <span class="nav-color">Заголовок страницы</span>
         </div><!-- container - конец -->
     </header>
+
     <main class="container">
         @RenderBody()
     </main>
    
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            
+        <div class="container">           
             <div class="navbar navbar-dark navbar-expand-md bg-dark">
                 &copy; 2024 - WEB_253504_DUBOVIK.UI - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                 <div class="navbar-nav ms-auto">
@@ -112,6 +55,10 @@
 
         </div>
     </footer>
+
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
 @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
