--- a/WEB_253504_DUBOVIK.UI/Views/Shared/_Navbar_UserInfo.cshtml
+++ b/WEB_253504_DUBOVIK.UI/Views/Shared/_Navbar_UserInfo.cshtml
@@ -1,3 +1,4 @@
+@model DateTime
 @await Component.InvokeAsync("Cart")
 <div class="dropdown ms-4 nav-color">
     <button class="btn btn-secondary dropdown-toggle"
@@ -25,3 +26,4 @@
         </li>
     </ul>
 </div>
+<h3>@Model.ToShortTimeString()</h3>
